# ElectroBench

./: .README.md.un~  LICENSE  README.md  bestcs1.6server
ElectroBench-0.1/: CMakeLists.txt
ElectroBench-0.1-alpha/: CMakeLists.txt
ElectroBench-0.1-alpha/shaders/: .frag.glsl.un~  frag.glsl  vert.glsl
ElectroBench-0.1-alpha/src/: ElectroFunctions.hxx
ElectroBench-0.1-stable/: Makefile
ElectroBench-0.1-stable/src/: ElectroFunctions.hxx
ElectroBench-0.1/shaders/: frag.glsl
ElectroBench-0.1/src/: M4A1.mtl  UZI.mtl  gl_texture.h  main.cxx  obj.hxx
ElectroBench-0.2/: conanprofile
ElectroBench-0.2-alpha/shaders/: .frag.glsl.un~  frag.glsl  vert.glsl
ElectroBench-0.2-alpha/src/: ElectroFunctions.hxx
ElectroBench-0.2-stable/shaders/: frag.glsl
ElectroBench-0.2-stable/src/: ElectroFunctions.hxx
ElectroBench-0.2/assets/: UZI.mtl
ElectroBench-0.2/lib/: util.hxx
ElectroBench-0.2/shaders/: frag.glsl  vert.glsl
ElectroBench-0.2/src/: main.cxx
ElectroBench-0.3-alpha/: conanfile.txt  conanprofile
ElectroBench-0.3-alpha/shaders/: .frag.glsl.un~  frag.glsl  vert.glsl
ElectroBench-0.3-alpha/src/: M4A1.mtl  Teapot.mtl  ak.mtl  loadpng.h  main.cxx  obj.hxx  process_image.h
ElectroBench-0.3-still-in-dev/: CMakeLists.txt  conanfile.txt
ElectroBench-0.3-still-in-dev/shaders/: .frag.glsl.kate-swp  frag.glsl  (+1 more)
ElectroBench-1.0/: CMakeLists.txt  build-arch.sh  build.sh
ElectroBench-1.1/: CMakeLists.txt  build-arch.sh
ElectroBench-1.2/: CMakeLists.txt
ElectroBench-1.2/shaders/: frag.glsl  vert.glsl
ElectroBench-1.2/src/: main.cxx
ElectroBench-1.5/: build-arch.sh
ElectroBench-1.6-beta/: CMakeLists.txt  exec.sh
ElectroBench-1.7-beta/: .Makefile.un~  Makefile  exec.sh
ElectroBench-1.8-beta/: MakeFile  Makefile  exec.sh
ElectroBench-1.9-beta/: exec.sh
ElectroBench-2.0-beta/: .Makefile.un~  Makefile  exec.sh
(+47 files in other folders)
